--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<DOCTYPE html>
+  <html>
+    <head>
+      <title>SiD</title>
+    </head>
+    <body>
+      <h1>SID</h1>
+    </body>
+  </html>
+         
