--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <DOCTYPE html>
   <html>
     <head>
+      <link href="main.css" rel"stylesheet" type="text/css">
       <title>SiD</title>
     </head>
     <body>
