--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <DOCTYPE html>
   <html>
     <head>
-      <link href="css/main.css" rel"stylesheet">
       <title>SiD</title>
+      <style type="text/css">
+        h1 {
+          color: Blue;
+        }
+      </style>
     </head>
     <body>
       <h1>SID</h1>
