--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
     <head>
       <title>SiD</title>
       <style type="text/css">
-        h1 {
-          color: Blue;
+        .FT {
+        color: Black;
         }
       </style>
     </head>
     <body>
-      <h1>SID</h1>
+      <center><h1 class="FT">SID Academy</h1></center>
     </body>
   </html>
          
