--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <title>SiD</title>
       <style type="text/css">
         .FT {
-        color: Black;
+        background-color: White;
         }
       </style>
     </head>
