--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </head>
     <body>
       <center><h1 class="FT">SID Academy</h1></center>
+      <h5>By Siddhesh<\h5>
     </body>
   </html>
          
